--- a/package.json
+++ b/package.json
@@ -9,9 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@auth0/nextjs-auth0": "^2.5.0",
+    "@magic-sdk/admin": "^1.9.2",
     "@next/font": "13.3.0",
+    "classnames": "^2.3.2",
+    "framer-motion": "^10.12.4",
+    "jsonwebtoken": "^9.0.0",
+    "magic-sdk": "^17.1.1",
     "next": "13.3.0",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-modal": "^3.16.1"
   }
 }
